fix: align-item by name-container

--- a/blocks/profile/__name-container/profile__name-container.css
+++ b/blocks/profile/__name-container/profile__name-container.css
@@ -1,6 +1,6 @@
 .profile__name-container {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: baseline;
   margin-bottom: 16px;
 }
